Fixed z-index for button on homepage with particles.js

--- a/resources/assets/sass/site.scss
+++ b/resources/assets/sass/site.scss
@@ -72,6 +72,7 @@ body, html {
     top: 0px;
     padding-top: $navbar_top_height!important;
     min-height: $header_height;
+    z-index: 10;
 }
 
 .below_nav_container_buffer {
